--- a/web/app/user/sass/config/_colors.scss
+++ b/web/app/user/sass/config/_colors.scss
@@ -1,3 +1,6 @@
+$pink: #E61B72;
+$light-grey: #999999;
+$dark-grey: #4D4D4D;
 $color-primary: #E83785;
 
 // Text Colors
